Chapter1/파이썬 설치후 둘러보기
https://www.python.org/downloads/
위의 url에서 책과 같은 버전인 3.11.2버전으로 설치


>>> <- 파이썬 대화형 인터프리터
>>> 1+1 <- 수식 입력
2 <- 바로 결과 출력

>>> quit() <-종료 커맨드 
>>> exit() <-종료 커맨드
ctr +z 엔터키 <-종료

-sys 모듈을 사용하여 종료
>>> import sys
>>> sys.exit()

-사칙연산
>>> 3/2.4
1.25
>>> 3*9
27

-변수사용
>>> a=1
>>> b=2
>>> a+b
3

-변수에 문자 대입후 출력
>>> a="Python"
>>> prit(a)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'prit' is not defined. Did you mean: 'print'?
>>> print(a)
Python
>>> b='avc'
>>> print(b)
avc

-조건문 if (파이썬 복붙씨 드래그후 우클릭)
>>> a=3
>>> if a>1:
... print("a는 1보다 큼")
  File "<stdin>", line 2
    print("a는 1보다 큼")
    ^
IndentationError: expected an indented block after 'if' statement on line 1
>>> if a>1:
...     print("a는 1보다 큼") <- print 앞에 tab 넣기 or 스페이스바 4칸 (반복문 for, while에서도 같음)
...
a는 1보다 큼


